chore: enable vector api